@@ -70,6 +70,7 @@ usb:v050Dp1100*
 usb:v051Dp0000*
 usb:v051Dp0002*
 usb:v051Dp0003*
+usb:v051Dp0004*
  UPOWER_BATTERY_TYPE=ups
  UPOWER_VENDOR=APC
 
